--- a/Java-Projects/TestSpringMVCHibernateProject/README
+++ b/Java-Projects/TestSpringMVCHibernateProject/README
@@ -1,11 +1,22 @@
 This project requires a lot of setup.
 It is currently configured for WebLogic, you'll need to change that to your container.
-It is also set up to hit Oracle DB, you'll need to change that to your DB.  You'll also need to create the schema and tables (just two tables).
+It is also set up to hit Oracle DB, you'll need to change that to your DB.  You'll also 
+need to create the schema and tables (just two tables).
 
-This project is a Spring MVC + Hibernate example.  JQuery is used in the UI to make Ajax calls.  The UI allows for CRUD operations 
-on a person table in the DB.
+This project is a Spring MVC + Hibernate example.  JQuery is used in the UI to make Ajax 
+calls.  The UI allows for CRUD operations on a person table in the DB.
 
-This is a Maven project so your version of Eclipse must have that capability (this was made with Eclipse Luna).  Look at the pom and grab those
-jars (or replace them with comparable jars) as needed.  You'll need Maven set up on your box.
+Also included is a Spring Controller used to test Spring Transaction Management and JAXB 
+Threading.  This Spring Controller is named JAXBThreadSafetyController.  
+To test the TX, try this curl:
+	while(true) ; do curl http://localhost:7001/TestSpringMVCHibernateProject/spring/jaxb-thread/tx ; done;
+To test the JAXB threading, try this (tweak the code to remove the ThreadLocal and just 
+use a SchemaFactory instance variable):
+	while(true) ; do curl http://localhost:7001/TestSpringMVCHibernateProject/spring/jaxb-thread/safe ; done;
 
-This war is not associated with an .ear, so if your container requires that (doesn't create a default for you), you'll need to create one.
+This is a Maven project so your version of Eclipse must have that capability (this was 
+made with Eclipse Luna).  Look at the pom and grab those jars (or replace them with comparable 
+jars) as needed.  You'll need Maven set up on your box.
+
+This war is not associated with an .ear, so if your container requires that (doesn't create 
+a default for you), you'll need to create one.
